# recs-app-clean

./: .env  .gitignore  CONTRIBUTING.md  HEALTH_REPORT.md  Makefile  README.md  branch_protect.json
apps/api/: .env.example  Dockerfile  pyproject.toml  requirements.txt
apps/api/app/: cache.py  db.py  embeddings_util.py  history_adj.py  logging_setup.py  main.py  metrics.py  middleware.py  models.py  queue.py  recs.py  schemas.py  seed_entrypoint.py  seed_minimal.py  settings.py  spoiler_lint.py
apps/api/app/providers/: base.py  justwatch.py  localdemo.py  serialized.py
apps/api/app/routers/: admin.py  auth.py  debug.py  health.py  onboarding.py  profiles.py  providers.py  (+6 more)
apps/api/recs_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: test_acceptance.py  test_admin_ratelimit.py  test_age_gating.py  test_ci_tripwire.py  test_determinism_and_anchor.py  test_family_coverage.py  test_family_meta_explain.py  test_family_mix_guardrail.py  test_family_pareto.py  test_feedback_loop.py  test_history_adj_influence.py  test_ingest.py  test_logging.py  test_metrics.py  test_metrics_stale_ratio.py  test_offers_quality.py  test_onboarding.py  test_onboarding_effects.py  test_perf_gate.py  test_ratio_and_intents.py  test_rationale.py  test_rationale_integration.py  test_ratios_strict.py  test_readyz.py  test_recommendations.py  test_seed_snapshots.py  test_substitutes.py
services/recsys/: Dockerfile  db.py  embeddings.py  jobs.py  pyproject.toml  scheduler.py  tasks.py  worker.py
services/recsys/adapters/: justwatch.py  serializd.py  types.py  util.py
(+81 files in other folders)
