[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recs-api"
version = "0.1.0"
description = "FastAPI service for TV recommender"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "pydantic==2.8.2",
  "pydantic-settings==2.4.0",
  "sqlmodel==0.0.21",
  "SQLAlchemy==2.0.32",
  "psycopg2-binary==2.9.9",
  "alembic==1.13.2",
  "python-multipart==0.0.9",
  "redis==5.0.7",
  "rq==1.16.2",
  "httpx==0.27.0",
  "python-json-logger>=2.0.7",
  "prometheus-client>=0.20.0",
]

[tool.setuptools]
packages = ["app"]
