[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recs-recsys"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "sqlmodel==0.0.21",
  "SQLAlchemy==2.0.32",
  "psycopg2-binary==2.9.9",
  "redis==5.0.7",
  "rq==1.16.2",
  "requests==2.32.3",
  "APScheduler==3.10.4",
]

[tool.setuptools]
packages = ["."]
